Major refactoring of GameHook internals. New preprocessor data_block_a245dcac. (#8)
This is a major refactoring of how internal properties are handled.
Now properties memory addresses can shift, or even be null.

Will extend GameHook to be able to support many additional features in the future.

# Backend changes:
- Created a global GameHookInstance.
- Created Application layer.
- Removed class-specific properties in favor of a global GameHookProperty that has a switch based on value.
- Created `ValueTransformers` to provide a static class for transforming bytes to values.
- Reworked the RetroArch polling driver to be more generic and move responsibility to the Instance class.
- Updated platform ranges for GBA.

- Introduced new field to the mapper called preprocessor.
- Currently one preprocessor has been created to handle memory encryption.

# Javascript changes:
Renamed integerToHexdecimalString to decimalToHexdecimal.
Renamed hexdecimalStringToInteger to hexdecimalToDecimal.

Removed onPropertyFrozen and onPropertyUnfrozen events in favor of directly using PropertyChanged.

--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -173,7 +173,7 @@
                                 </tr>
                                 <tr>
                                     <td>Address</td>
-                                    <td>0x{{ integerToHexdecimalString(editingProperty.property.address).replace(' ', '') }}</td>
+                                    <td>0x{{ decimalToHexdecimal(editingProperty.property.address) }}</td>
                                 </tr>
                                 <tr>
                                     <td>Size</td>
@@ -389,7 +389,7 @@
                     }
                 },
                 onBlur(event, index) {
-                    const valueInteger = GameHookMapperClient.hexdecimalStringToInteger(event.target.value)
+                    const valueInteger = GameHookMapperClient.hexdecimalToDecimal(event.target.value)
 
                     this.editingProperty.bytes[index] = valueInteger
                 }
@@ -512,7 +512,7 @@
                 this.loadData()
             },
             methods: {
-                integerToHexdecimalString: GameHookMapperClient.integerToHexdecimalString,
+                decimalToHexdecimal: GameHookMapperClient.decimalToHexdecimal,
 
                 displayBytes: function (bytes, forceMode) {
                     const mode = forceMode ?? this.userSettings.displayBytesMode
@@ -520,9 +520,9 @@
                     if (mode === 'decimal') {
                         return bytes.join(' ')
                     } else if (mode === 'hexdecimalLower') {
-                        return bytes.map(x => GameHookMapperClient.integerToHexdecimalString(x, false)).join(' ')
+                        return bytes.map(x => GameHookMapperClient.decimalToHexdecimal(x, false)).join(' ')
                     } else if (mode === 'hexdecimalUpper') {
-                        return bytes.map(x => GameHookMapperClient.integerToHexdecimalString(x, true)).join(' ')
+                        return bytes.map(x => GameHookMapperClient.decimalToHexdecimal(x, true)).join(' ')
                     } else {
                         throw new Error(`Invalid user setting found for displayBytesMode: ${mode}.`)
                     }
