More gracefully handle exceptions. Added PropertyProcessException type for tracking exact properties. Updated code around exception handling. Fixed ChangeMapper not being async. Removed SendMapperLoadError() as it was not in use. GetResultWithinRange now handles the start and end of each range -- inclusive .SingleOrDefault() Updated index.html error-hint component.

--- a/src/GameHook.WebAPI/wwwroot/index.html
+++ b/src/GameHook.WebAPI/wwwroot/index.html
@@ -333,7 +333,7 @@
 
         const errorHintComponent = {
             props: ['err'],
-            template: `<template v-if="err"><slot></slot><div v-if="err">{{ err.detail }}</div><div v-else>An unknown application error has occurred.</div><div>Please refer to the server logs if you need more information.</div></template>`
+            template: `<template v-if="err"><slot></slot><div v-if="err && err.title">{{ err.title }}</div><div v-if="err && err.detail">{{ err.detail }}</div><div>Please refer to the server logs if you need more information.</div></template>`
         }
 
         const descriptionBtnComponent = {
